[gd_scene format=3 uid="uid://njh127odqgw3"]

[ext_resource type="Script" uid="uid://cvwbujupbfdc2" path="res://scripts/custom_button.gd" id="1_bfr1r"]
[ext_resource type="Texture2D" uid="uid://do67s1hk7a7s8" path="res://assets/menu_asset/button_hover.png" id="2_32hcy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_smbs8"]
atlas = ExtResource("2_32hcy")
region = Rect2(9, 2, 270, 195)

[sub_resource type="Animation" id="Animation_32hcy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HoverTexture:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HoverTexture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_bfr1r"]
resource_name = "hover_enter"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HoverTexture:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HoverTexture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 0.08),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yt7k8"]
resource_name = "hover_exit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HoverTexture:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HoverTexture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 0.08),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_32hcy"]
_data = {
&"RESET": SubResource("Animation_32hcy"),
&"hover_enter": SubResource("Animation_bfr1r"),
&"hover_exit": SubResource("Animation_yt7k8")
}

[node name="CustomButton" type="TextureButton" unique_id=100766507]
custom_minimum_size = Vector2(248, 127)
size_flags_vertical = 4
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("1_bfr1r")

[node name="HoverTexture" type="TextureRect" parent="." unique_id=259621383]
visible = false
modulate = Color(1, 1, 1, 0)
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = -0.20600002
anchor_top = -0.22800002
anchor_right = 1.202
anchor_bottom = 1.3230001
offset_left = 0.088005066
offset_top = -0.04399872
offset_right = -0.0960083
offset_bottom = -0.021011353
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_smbs8")
expand_mode = 1
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=461555918]
libraries/ = SubResource("AnimationLibrary_32hcy")
speed_scale = 2.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
